--- a/.github/workflows/docker-action-workflow.yml
+++ b/.github/workflows/docker-action-workflow.yml
@@ -11,7 +11,7 @@ jobs:
             uses: actions/checkout@v3
           - name: Run Docker Action
             id: hello-action
-            uses: ./github/actions/hello-world-docker-action
+            uses: ./.github/actions/hello-world-docker-action
             with:
                 who-to-great: super-linters
           - name: Print Outputs
