--- a/.github/workflows/docker-action-workflow.yml
+++ b/.github/workflows/docker-action-workflow.yml
@@ -1,21 +1,19 @@
-name: Docker action
+name: Docker Action
 
 on: [workflow_dispatch]
 
 jobs:
-    docker-action:
-        name: Running Docker Action
-        runs-on: ubuntu-latest
-        steps:
-          - name: Checkout
-            uses: actions/checkout@v3
-          - name: Run Docker Action
-            id: hello-action
-            uses: ./.github/actions/hello-world-docker-action
-            with:
-                who-to-great: super-linters
-          - name: Print Outputs
-            run: echo "The time was ${{ steps.hello-action.outputs.time }}" when the action said Hello
-          
-            
+  docker-action:
+    name: Running Docker Action
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.0
+      - name: Run Docker Action
+        id: hello-action
+        uses: ./.github/actions/hello-world-docker-action
+        with:
+          who-to-greet: super-linters
+      - name: Print Outputs
+        run: echo "The time was ${{ steps.hello-action.outputs.time }} when the action said hello"
     
