--- a/.github/workflows/docker-action-workflow.yml
+++ b/.github/workflows/docker-action-workflow.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.0
+        with: 
+            Default: ${{ github.repository }}
       - name: Run Docker Action
         id: hello-action
         uses: ./.github/actions/hello-world-docker-action
