--- a/.github/workflows/docker-action-workflow.yml
+++ b/.github/workflows/docker-action-workflow.yml
@@ -8,7 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.5.0
+        uses: actions/checkout@v3
+        with:
+           repository: exo1
       - name: Run Docker Action
         id: hello-action
         uses: ./.github/actions/hello-world-docker-action
