--- a/.github/workflows/docker-action-workflow.yml
+++ b/.github/workflows/docker-action-workflow.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-           repository: exo1
+           repository: hhammour/exo1
       - name: Run Docker Action
         id: hello-action
         uses: ./.github/actions/hello-world-docker-action
